<resources>
    <string name="discount_tool_text">25% OFF</string>
    <string name="price_tool_text">$3.000.000</string>
    <string name="product_tool_text">Iphone 11</string>
    <string name="shipping_free_tool_text">Envio gratis</string>
    <string name="discount_text_tool_text">25 % descuento</string>
    <string name="pay_ways_text_tool_text">Paga en 30 cuotas de $100.000</string>

    <string name="installment_without_interest">"en %s sin interés"</string>
    <string name="installment">"en %s</string>
    <string name="suggestion_tool_text">Iphone 11</string>
    <string name="buscar_en_mercadolibre">Buscar en MercadoLibre</string>
    <string name="empty_search_subtitle">Revisa que la palabra este bien escrita. Tambien puedes probar con menos terminos o mas generales</string>
    <string name="empty_search_noTitle">No encontramos publicaciones</string>
    <string name="mercado_encuentra">En mercado libre encuentras todo</string>
    <string name="cancelar">Cancelar</string>
</resources>
